Project completed, ASP.NET MVC Application is completed.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This project was to familarize myself with building an ASP.NET MVC app. Please use the Movie App 
+        link in the upper left corner to view the Movie Database. Feel free to add movies if you like.
+    </p>
 </div>
