--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,4 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This project is build on the MIT license. You should not expect any privacy from this project as 
+    that was not my concern so early in learning how to use ASP.NET MVC. Feel free to copy and edit 
+    the code to make it your own, but I make no guarentee 
+    about the safety of any information within this project.'
+</p>
